<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_apps"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_circle_outline"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_today"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>
